--- a/src/main/java/com/mycompany/raihanefelmaulana/perpustakaanclien/FormPengembalian.form
+++ b/src/main/java/com/mycompany/raihanefelmaulana/perpustakaanclien/FormPengembalian.form
@@ -160,11 +160,11 @@
           <Properties>
             <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
               <Table columnCount="5" rowCount="4">
-                <Column editable="true" title="Title 1" type="java.lang.Object"/>
-                <Column editable="true" title="Title 2" type="java.lang.Object"/>
-                <Column editable="true" title="Title 3" type="java.lang.Object"/>
-                <Column editable="true" title="Title 4" type="java.lang.Object"/>
-                <Column editable="true" title="Title 5" type="java.lang.Object"/>
+                <Column editable="true" title="Pengembalian Id" type="java.lang.Object"/>
+                <Column editable="true" title="Peminjaman Id" type="java.lang.Object"/>
+                <Column editable="true" title="Tgl Dikembalikan" type="java.lang.Object"/>
+                <Column editable="true" title="Terlambat" type="java.lang.Object"/>
+                <Column editable="true" title="Denda" type="java.lang.Object"/>
               </Table>
             </Property>
             <Property name="columnModel" type="javax.swing.table.TableColumnModel" editor="org.netbeans.modules.form.editors2.TableColumnModelEditor">
